# django_advanced_password_validation

./: .flake8  .gitignore  HISTORY.md  LICENSE.txt  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements_test.txt  setup.py
.github/workflows/: deploy_to_pypi.yaml  test.yaml
django-advanced_password_validation/: __init__.py  advanced_password_validation.py
django_advanced_password_validation/: __init__.py  advanced_password_validation.py
django_advanced_password_validation/tests/: settings.py  test_validators.py
